--- a/index.html
+++ b/index.html
@@ -520,14 +520,14 @@
     // ======================================================
     // CONFIGURAÇÃO DO FIREBASE (SUBSTITUA PELOS SEUS DADOS)
     // ======================================================
-    const firebaseConfig = {
-        apiKey: "SUA_API_KEY_AQUI",
-        authDomain: "SEU_PROJETO.firebaseapp.com",
-        projectId: "SEU_PROJECT_ID",
-        storageBucket: "SEU_PROJETO.appspot.com",
-        messagingSenderId: "SEU_SENDER_ID",
-        appId: "SEU_APP_ID"
-    };
+const firebaseConfig = {
+  apiKey: "AIzaSyAyl9gtX41SlfQADmUAXCYRnWIQyFUeX6s",
+  authDomain: "cafe-iac.firebaseapp.com",
+  projectId: "cafe-iac",
+  storageBucket: "cafe-iac.firebasestorage.app",
+  messagingSenderId: "754186773334",
+  appId: "1:754186773334:web:2f49f6c17c326073c86cf7"
+};
 
     // Inicializa Firebase apenas se a config estiver preenchida (evita crash se usuário copiar sem configurar)
     let db, auth;
